--- a/index.html
+++ b/index.html
@@ -161,12 +161,14 @@
         <div class="buttons">
           <a
             class="favoritos"
+            target="blank"
             href="https://github.com/AugustoAmaral?tab=stars"
           >
             Ver favoritos
           </a>
           <a
             class="favoritos"
+            target="blank"
             href="https://github.com/AugustoAmaral?tab=repositories"
             >Ver Repositórios
           </a>
